# docker-mcp-server-starter

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  server.py
