[project]
name = "youtube-mcp-server"
version = "0.1.0"
description = "MCP server for YouTube operations including transcript extraction and name digitization"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.2",
    "youtube-transcript-api>=1.1.1",
]

[project.scripts]
youtube-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
